--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "accessor": "^3.0.0",
     "d3-selection": "^1.4.1",
     "lodash.pairs": "^3.0.1",
-    "seedrandom": "^3.0.5"
+    "seedrandom": "^3.0.5",
+    "soundbank-reverb": "^1.1.2"
   }
 }
