--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "audio-context-singleton": "^1.0.3",
     "errorback-promise": "^1.0.0",
     "oknok": "^3.0.0",
     "route-state": "^2.0.5",
+    "seedrandom": "^3.0.5",
     "sirv-cli": "^0.4.4",
+    "soundbank-reverb": "^1.1.2",
     "svelte-error-message": "^1.0.1"
   }
 }
