--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "audio-context-singleton": "^1.0.3",
     "errorback-promise": "^1.0.0",
+    "lodash.clonedeep": "^4.5.0",
     "oknok": "^3.0.0",
     "route-state": "^2.0.5",
     "seedrandom": "^3.0.5",
