--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "audio-context-singleton": "^1.0.3",
     "errorback-promise": "^1.0.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.curry": "^4.1.1",
     "oknok": "^3.0.0",
     "route-state": "^2.0.5",
     "seedrandom": "^3.0.5",
